--- a/home/home.html
+++ b/home/home.html
@@ -144,100 +144,84 @@
           <tr>       <td style="border-image: initial;">             <strong>Интеграция программ 1С</strong>            </td>           <td style="border-image: initial;">От 2 часов</td>       </tr>
                  </tbody>
       </table> -->
-<table class="table table-hover table-bordered">
-<tbody>
-<tr>
-<td style="width: 481px; text-align: center; vertical-align: middle;" width="481">
-<p><strong>Наименование и вид работ</strong></p>
-</td>
-<td style="width: 481px; text-align: center; vertical-align: middle;" width="166">
-<p><strong>Цена, руб.</strong></p>
-</td>
-<td style="width: 481px; text-align: center; vertical-align: middle;" width="166">
-<p><strong>Цена, руб. при действующей подписке ИТС, приобретенной у нас</strong></p>
-</td>
-</tr>
-<tr>
-<td style="text-align: left;" width="481">
-<p>Установка и настройка 1С, обновление типовых конфигураций*</p>
-</td>
-<td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
-<p>1400 за базу или релиз</p>
-</td>
-<td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
-<p>1250 за базу или релиз</p>
-</td>
-</tr>
-<tr>
-<td style="text-align: left;" width="481">
-<p>Обновление <strong>нетиповых</strong> конфигураций*</p>
-</td>
-<td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
-<p>1500 (час)</p>
-</td>
-<td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
-<p>1300 (час)</p>
-</td>
-</tr>
-<tr>
-<td style="text-align: left;" width="481">
-<p>Технические работы с базой. Тестирование и сервисное обслуживание базы*</p>
-</td>
-<td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
-<p>1400 (час)</p>
-</td>
-<td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
-<p>1250 (час)</p>
-</td>
-</tr>
-<tr>
-<td style="text-align: left;" width="481">
-<p>Разработка новых отчетов и печатных форм**</p>
-</td>
-<td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
-<p>1400 (час) до 5 часов</p>
-</td>
-<td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
-<p>1250 (час)</p>
-</td>
-</tr>
-<tr>
-<td style="text-align: left;" width="481">
-<p>Разработка нового функционала***</p>
-</td>
-<td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
-<p>Индивидуально</p>
-</td>
-<td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
-<p>Индивидуально</p>
-</td>
-</tr>
-<tr>
-<td style="text-align: left;" width="481">
-<p>Консультации по ведению учета в программах 1С</p>
-</td>
-<td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
-<p>800 (30 мин)</p>
-</td>
-<td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
-<p>700 (30 мин)</p>
-</td>
-</tr>
-<tr>
-<td style="text-align: left;" width="481">
-<p>Прочие задачи и их решения*</p>
-</td>
-<td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
-<p>от 1400 (час)</p>
-</td>
-<td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
-<p>1250 (час)</p>
-</td>
-</tr>
-</tbody>
-</table>
+  <table class="table table-striped">
+    <tbody>
+      <tr>
+        <td style="width: 481px; text-align: center; vertical-align: middle;" width="481">
+          <p><strong>Наименование и вид работ</strong></p>
+        </td>
+        <td style="width: 481px; text-align: center; vertical-align: middle;" width="166">
+          <p><strong>Цена, руб.</strong></p>
+        </td>
+      </tr>
+      <tr>
+        <td style="text-align: left;" width="481">
+          <p>Первоначальная установка и настройка программ 1С</p>
+        </td>
+        <td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
+          <p>1400 за базу или релиз</p>
+        </td>
+      </tr>
+      <tr>
+        <td style="text-align: left;" width="481">
+          <p>Обновление конфигурации 1С типовых и доработанных</p>
+        </td>
+        <td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
+          <p>1500 (час)</p>
+        </td>
+      </tr>
+      <tr>
+        <td style="text-align: left;" width="481">
+          <p>Платформа 1С предприятие разработка и программирование
+        </p>
+        </td>
+        <td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
+          <p>1400 (час)</p>
+        </td>
+      </tr>
+      <tr>
+        <td style="text-align: left;" width="481">
+          <p>Создание обработок, отчётов и печатных форм для любой 1С</p>
+        </td>
+        <td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
+          <p>1400 (час) до 5 часов</p>
+        </td>
+      </tr>
+      <tr>
+        <td style="text-align: left;" width="481">
+          <p>Загрузка\выгрузка данных из Word, Excel, XML</p>
+        </td>
+        <td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
+          <p>Индивидуально</p>
+        </td>
+      </tr>
+      <tr>
+        <td style="text-align: left;" width="481">
+          <p>Настройка обменов, перенос данных между базами 1С и другими БД</p>
+        </td>
+        <td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
+          <p>800 (30 мин)</p>
+        </td>
+      </tr>
+      <tr>
+        <td style="text-align: left;" width="481">
+          <p>Тестирование и исправление проблемы с запуском, зависанием и восстановлением</p>
+        </td>
+        <td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
+          <p>от 1400 (час)</p>
+        </td>
+      </tr>
+      <tr>
+        <td style="text-align: left;" width="481">
+          <p>Сопровождение 1С</p>
+        </td>
+        <td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
+          <p>от 1400 (час)</p>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
-<p style="text-align: center;"><button id="modalServiceOrderBtn" class="btn btn-primary btn-lg order-btn" data-form_type="service_info" data-service-name="Обслуживание 1С">Оставить заявку</button></p>
 
 <div class="container">
 
