--- a/home/home.html
+++ b/home/home.html
@@ -109,113 +109,78 @@
 <h1 style="text-align: center;"><span style="font-size: 18pt;">Список услуг</span></h1>
 <p><em>Оценка стоимости разовых работ проводится на основании вида работ. </em></p>
 <div class="table-responsive">
-<!--           <table class="custom-table">
-        <tbody>
-          <tr>          <td style="border-image: initial;">              <strong>Обработки и отчеты</strong>
-              <br />
-                         Создание новых отчетов и обработок, расширяющих функциональность системы           </td>           <td style="border-image: initial;">От 1 часа</td>        </tr>
-
-          <tr>       <td style="border-image: initial;">             <strong>Настройка обмена данных</strong>
-              <br />
-                         Обмен данных между различными конфигурациями 1С, программами и web сайтами. Обмен через web-сервисы и другие механизмы             </td>           <td style="border-image: initial;">От 2 часов</td>       </tr>
-
-          <tr>          <td style="border-image: initial;">              <strong>Автоматическая загрузка-выгрузка данных</strong>
-              <br />
-                         Создание обработки, которая будет загружать данные из нужного файла в объекты системы и выгружать информацию из программы в требуемый формат.          </td>           <td style="border-image: initial;">От 4 часов</td>       </tr>
-
-          <tr>          <td style="border-image: initial;">              <strong>Интеграция с госинфосистемами</strong>
-              <br />
-                         Интеграция программ на базе 1С с ФГИС Меркурий, ЕГАИС, системой «Маркировка»           </td>           <td style="border-image: initial;">От 2 часов</td>       </tr>
-
-          <tr>       <td style="border-image: initial;">             <strong>Интеграция с Битрикс 24</strong>
-              <br />
-                         Обмен данными с программами 1С:ЗУП, 1С:УТ, 1С:УНФ, 1С:УПП, 1С:ERP          </td>           <td style="border-image: initial;">От 2 часов</td>       </tr>
-
-          <tr>       <td style="border-image: initial;">             <strong>Настройка прав доступа</strong>            </td>           <td style="border-image: initial;">От 2 часов</td>       </tr>
-
-          <tr>       <td style="border-image: initial;">             <strong>Создание обработок 1С</strong>             </td>           <td style="border-image: initial;">От 1 часа</td>        </tr>
-
-          <tr>       <td style="border-image: initial;">             <strong>Настройка новых отчетов</strong>           </td>           <td style="border-image: initial;">От 1 часа</td>        </tr>
-
-          <tr>       <td style="border-image: initial;">             <strong>Доработка и создание новых печатных форм</strong>          </td>           <td style="border-image: initial;">От 0,5 часа за одну печатную форму</td>       </tr>
-
-          <tr>       <td style="border-image: initial;">             <strong>Исправление ошибок, оптимизация 1С</strong>            </td>           <td style="border-image: initial;">От 1 часа</td>        </tr>
-
-          <tr>       <td style="border-image: initial;">             <strong>Интеграция программ 1С</strong>            </td>           <td style="border-image: initial;">От 2 часов</td>       </tr>
-                 </tbody>
-      </table> -->
-  <table class="table table-striped">
+  <table class="table table-bordered">
     <tbody>
       <tr>
-        <td style="width: 481px; text-align: center; vertical-align: middle;" width="481">
+        <td id="table-center">
           <p><strong>Наименование и вид работ</strong></p>
         </td>
-        <td style="width: 481px; text-align: center; vertical-align: middle;" width="166">
+        <td id="table-center" style="width: 200px">
           <p><strong>Цена, руб.</strong></p>
         </td>
       </tr>
       <tr>
-        <td style="text-align: left;" width="481">
-          <p>Первоначальная установка и настройка программ 1С</p>
+        <td>
+          <p><strong>Первоначальная</strong><br> установка и настройка программ 1С</p>
         </td>
-        <td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
+        <td>
           <p>1400 за базу или релиз</p>
         </td>
       </tr>
       <tr>
-        <td style="text-align: left;" width="481">
-          <p>Обновление конфигурации 1С типовых и доработанных</p>
+        <td>
+          <p><strong>Обновление</strong><br> конфигурации 1С типовых и доработанных</p>
         </td>
-        <td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
+        <td>
           <p>1500 (час)</p>
         </td>
       </tr>
       <tr>
-        <td style="text-align: left;" width="481">
-          <p>Платформа 1С предприятие разработка и программирование
+        <td>
+          <p><strong>Платформа 1С предприятие </strong><br>разработка и программирование
         </p>
         </td>
-        <td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
+        <td>
           <p>1400 (час)</p>
         </td>
       </tr>
       <tr>
-        <td style="text-align: left;" width="481">
-          <p>Создание обработок, отчётов и печатных форм для любой 1С</p>
+        <td>
+          <p><strong>Создание</strong><br> обработок, отчётов и печатных форм для любой 1С</p>
         </td>
-        <td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
+        <td>
           <p>1400 (час) до 5 часов</p>
         </td>
       </tr>
       <tr>
-        <td style="text-align: left;" width="481">
-          <p>Загрузка\выгрузка данных из Word, Excel, XML</p>
+        <td>
+          <p><strong>Загрузка\выгрузка</strong><br> данных из Word, Excel, XML</p>
         </td>
-        <td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
+        <td>
           <p>Индивидуально</p>
         </td>
       </tr>
       <tr>
-        <td style="text-align: left;" width="481">
-          <p>Настройка обменов, перенос данных между базами 1С и другими БД</p>
+        <td>
+          <p><strong>Настройка обменов</strong><br> перенос данных между базами 1С и другими БД</p>
         </td>
-        <td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
+        <td>
           <p>800 (30 мин)</p>
         </td>
       </tr>
       <tr>
-        <td style="text-align: left;" width="481">
-          <p>Тестирование и исправление проблемы с запуском, зависанием и восстановлением</p>
+        <td>
+          <p><strong>Тестирование и исправление проблем</strong><br> с запуском, зависанием и восстановлением</p>
         </td>
-        <td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
+        <td>
           <p>от 1400 (час)</p>
         </td>
       </tr>
       <tr>
-        <td style="text-align: left;" width="481">
-          <p>Сопровождение 1С</p>
+        <td>
+          <p><strong>Сопровождение 1С</strong></p>
         </td>
-        <td style="width: 166px; text-align: center; vertical-align: middle;" width="166">
+        <td>
           <p>от 1400 (час)</p>
         </td>
       </tr>
