--- a/home/home.html
+++ b/home/home.html
@@ -32,7 +32,7 @@
                 <div class="row h-100 align-items-center">
                     <div class="col-5">
                         <div class="top-header-content">
-                            <p style="font-size: 18px">Услуги 1С программиста</p>
+                            <p style="font-size: 18px">Услуги программиста 1С – 1200 руб/час.</p>
                         </div>
                     </div>
                     <div class="col-7">
@@ -45,30 +45,18 @@
         </div>
         <!-- Top Header Area End -->
     </header>
-
-     <!-- Welcome Area Start -->
-	<!-- <div class="welcome-slides owl-carousel"> -->
-	    <!-- Single Welcome Slide -->
-	    <div class="single-welcome-slide bg-img" style="background-image: url(img/bg-img/bg-2.png); background-size: 100% 100%">
-	        <!-- Welcome Content -->
-	        <div class="welcome-content h-100">
-	            <div class="container h-100">
-	                <div class="row h-100 align-items-center">
-	                    <!-- Welcome Text -->
-	                    <div class="col-12 col-md-9 col-lg-6">
-	                        <div class="welcome-text">
-	                            <h1 data-animation="fadeInUp" data-delay="100ms">Продажа и комплексное обслуживание 1С</h1>
-	                            <p data-animation="fadeInUp" data-delay="400ms">прогрессивная IT - компания, официальный франчайзи фирмы «1С». Мы предоставляем полный комплекс услуг по продаже, внедрению и сопровождению 1С в любой точке страны. Успешно работаем с компаниями из различных отраслей — от небольших фирм до крупных холдингов.</p>
-	                            <a href="#" class="btn akame-btn" data-animation="fadeInUp" data-delay="700ms">Задать вопрос</a>
-	                        </div>
-	                    </div>
-	                </div>
-	            </div>
-	        </div>
-	    </div>
-	<!-- </div> -->
-    <!-- Welcome Area End -->
-
+  <div style="text-align: center; background-color: #5b5f50; color: #cef472; height: 30vh;">
+    <div>
+      <div class="container" style="text-shadow: 2px 4px 3px rgba(0,0,0,0.3);">
+        <h1><b>Стоимость и цены на наши услуги:</b></h1>
+        <h2><b>1 час = 1200 руб.</b></h2>
+        <p>Обслуживание, сопровождение, поддержка, настройка, обновление программ 1С</p>
+      </div>
+      <a href="#" class="btn akame-btn">Задать вопрос</a>
+    </div>
+  </div>
+<!-- Продажа и комплексное обслуживание 1С
+                                прогрессивная IT - компания, официальный франчайзи фирмы «1С». Мы предоставляем полный комплекс услуг по продаже, внедрению и сопровождению 1С в любой точке страны. Успешно работаем с компаниями из различных отраслей — от небольших фирм до крупных холдингов. -->
 
 <!-- CONTENT BEGIN -->
 <div class="container">
@@ -76,7 +64,6 @@
         <div class="col-xs-12">           
             <article class="page" itemscope itemtype="http://schema.org/Service">
                 <meta itemprop="serviceType" content='Обслуживание 1С: Предприятие'/>
-                <h1 itemprop="name" class="caption type-caption">Решения 1С</h1>
                 <div class="page-body">
                         <p style="text-align: justify;">Программы на платформе 1С обладают широким функционалом и способны закрыть практически любую типовую потребность современного бизнеса. Если вам необходим функционал, который вы не можете найти в типовом решении 1С, возникает необходимость доработать базу или конфигурацию программы.</p>
 <h2 style="text-align: center;"><span style="font-size: 18pt;">Такие доработки могут понадобиться:</span></h2>
