Edit css, ad font family. Simple refactor.

--- a/home/home.html
+++ b/home/home.html
@@ -2,42 +2,29 @@
 <html>
 <head>
 	<title>Частный 1С прграммист</title>
-
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
-
-    <meta property="og:image" content="https://avega-soft.ru//themes/template/assets/img/src/avega-soft.png">
-
-<title>Обслуживание и сопровождение 1С: Предприятие - цены и тарифы</title>
-
-<!-- Bootstrap core CSS -->
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Custom styles for this template -->
-<style>
-    form {
-        background-color: #f9f9f9;
-        padding: 20px;
-        margin: 20px;
-    }
-</style>
-
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" id="wpex-google-font-open-sans-css" href="./fonts/css" type="text/css" media="all">
+  
+      <!-- Тут описывается класс под хэдером -->
+    <style type="text/css" data-type="vc_shortcodes-custom-css">.vc_custom_1560276207363{ font-family:"Open Sans"; font-size:18px; position: relative; z-index: 3; color: #fff; padding: 50px;}</style>
 </head>
 <body>
 	<!-- Header Area Start -->
-    <header style="height: 10%" class="header-area">
+    <header class="header-area">
         <!-- Top Header Area Start -->
         <div class="top-header-area">
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
                     <div class="col-5">
                         <div class="top-header-content">
-                            <p style="font-size: 18px">Услуги программиста 1С – 1200 руб/час.</p>
+                            <p>Услуги программиста 1С – 1200 руб/час.</p>
                         </div>
                     </div>
                     <div class="col-7">
                         <div class="top-header-content text-right">
-                            <p style="font-size: 18px"> почта freesupport1c@yandex.ru <span class="mx-2"></span> | <span class="mx-2"></span> <i class="fa fa-phone" aria-hidden="true"></i> тел. 8-951-427-2512</p>
+                            <p> почта freesupport1c@yandex.ru <span class="mx-2"></span> | <span class="mx-2"></span> <i class="fa fa-phone" aria-hidden="true"></i> тел. 8-951-427-2512</p>
                         </div>
                     </div>
                 </div>
@@ -45,18 +32,36 @@
         </div>
         <!-- Top Header Area End -->
     </header>
-  <div style="text-align: center; background-color: #5b5f50; color: #cef472; height: 30vh;">
-    <div>
-      <div class="container" style="text-shadow: 2px 4px 3px rgba(0,0,0,0.3);">
-        <h1><b>Стоимость и цены на наши услуги:</b></h1>
-        <h2><b>1 час = 1200 руб.</b></h2>
-        <p>Обслуживание, сопровождение, поддержка, настройка, обновление программ 1С</p>
+
+    <div id="test" align="center" class="single-page-content entry clr">
+      <div data-vc-full-width="true" data-vc-full-width-init="true" class="vc_row wpb_row vc_row-fluid vc_custom_1560276207363 wpex-vc_row-has-fill wpex-vc-row-stretched wpex-has-overlay">
+        <div>
+          <div>
+            <div>
+              <div>
+              </div>
+            <h3 style="color:#ffffff;font-weight:700;width:1000px; font-size: 40px">
+              <span class="vcex-heading-inner clr">Стоимость и цены на наши услуги:<br></span>
+            </h3>
+            <h3 style="color:#ffffff;font-weight:700;text-align:center;width:1000px; font-size: 30px">
+              <span class="vcex-heading-inner clr">1 час = 1200 руб.</span>
+            </h3>
+            <h3 style="color:#f2ea00;font-weight:600;text-align:center;width:1200px; font-size: 30px">
+              <span class="vcex-heading-inner clr">ОБСЛУЖИВАНИЕ, СОПРОВОЖДЕНИЕ, ПОДДЕРЖКА, НАСТРОЙКА, ОБНОВЛЕНИЕ ПРОГРАММ 1С</span>
+            </h3>
+              <div><a style="top: 20px" href="#" class="btn akame-btn">Задать вопрос</a></div>
+          </div>
+        </div>
       </div>
-      <a href="#" class="btn akame-btn">Задать вопрос</a>
     </div>
   </div>
-<!-- Продажа и комплексное обслуживание 1С
-                                прогрессивная IT - компания, официальный франчайзи фирмы «1С». Мы предоставляем полный комплекс услуг по продаже, внедрению и сопровождению 1С в любой точке страны. Успешно работаем с компаниями из различных отраслей — от небольших фирм до крупных холдингов. -->
+
+  <div align="center" class="container">
+    <div style="padding-top: 5vh">Продажа и комплексное обслуживание 1С</div>
+    <div style="padding-top: 4vh">
+      прогрессивная IT - компания, официальный франчайзи фирмы «1С». Мы предоставляем полный комплекс услуг по продаже, внедрению и сопровождению 1С в любой точке страны. Успешно работаем с компаниями из различных отраслей — от небольших фирм до крупных холдингов.  
+    </div>
+  </div>
 
 <!-- CONTENT BEGIN -->
 <div class="container">
@@ -65,7 +70,8 @@
             <article class="page" itemscope itemtype="http://schema.org/Service">
                 <meta itemprop="serviceType" content='Обслуживание 1С: Предприятие'/>
                 <div class="page-body">
-                        <p style="text-align: justify;">Программы на платформе 1С обладают широким функционалом и способны закрыть практически любую типовую потребность современного бизнеса. Если вам необходим функционал, который вы не можете найти в типовом решении 1С, возникает необходимость доработать базу или конфигурацию программы.</p>
+
+                        <!-- <p style="text-align: justify;">Программы на платформе 1С обладают широким функционалом и способны закрыть практически любую типовую потребность современного бизнеса. Если вам необходим функционал, который вы не можете найти в типовом решении 1С, возникает необходимость доработать базу или конфигурацию программы.</p> -->
 <h2 style="text-align: center;"><span style="font-size: 18pt;">Такие доработки могут понадобиться:</span></h2>
 <div class="choose-us-content mt-30 mb-80">
     <ul>
