--- a/home/home.html
+++ b/home/home.html
@@ -8,51 +8,47 @@
     <link rel="stylesheet" id="wpex-google-font-open-sans-css" href="./fonts/css" type="text/css" media="all">
   
       <!-- Тут описывается класс под хэдером -->
-    <style type="text/css" data-type="vc_shortcodes-custom-css">.vc_custom_1560276207363{ font-family:"Open Sans"; font-size:18px; position: relative; z-index: 3; color: #fff; padding: 50px;}</style>
+    <style type="text/css" data-type="vc_shortcodes-custom-css">.vc_custom_1560276207363{ font-family:"Open Sans"; position: relative; z-index: 3; padding: 30px;}</style>
 </head>
 <body>
 	<!-- Header Area Start -->
     <header class="header-area">
-        <!-- Top Header Area Start -->
-        <div class="top-header-area">
-            <div class="container h-100">
-                <div class="row h-100 align-items-center">
-                    <div class="col-5">
-                        <div class="top-header-content">
-                            <p>Услуги программиста 1С – 1200 руб/час.</p>
-                        </div>
-                    </div>
-                    <div class="col-7">
-                        <div class="top-header-content text-right">
-                            <p> почта freesupport1c@yandex.ru <span class="mx-2"></span> | <span class="mx-2"></span> <i class="fa fa-phone" aria-hidden="true"></i> тел. 8-951-427-2512</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Top Header Area End -->
+      <!-- Top Header Area Start -->
+      <div class="top-header-area">
+          <div class="container h-100">
+              <div class="row h-100 align-items-center">
+                  <div class="col-5">
+                      <div class="top-header-content">
+                          <p>Услуги программиста 1С – 1200 руб/час.</p>
+                      </div>
+                  </div>
+                  <div class="col-7">
+                      <div class="top-header-content text-right">
+                          <p> почта freesupport1c@yandex.ru <span class="mx-2"></span> | <span class="mx-2"></span> <i class="fa fa-phone" aria-hidden="true"></i> тел. 8-951-427-2512</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <!-- Top Header Area End -->
     </header>
 
-    <div id="test" align="center" class="single-page-content entry clr">
-      <div data-vc-full-width="true" data-vc-full-width-init="true" class="vc_row wpb_row vc_row-fluid vc_custom_1560276207363 wpex-vc_row-has-fill wpex-vc-row-stretched wpex-has-overlay">
+    <div id="test" align="center">
+      <div class="vc_custom_1560276207363">
         <div>
+          <h3 style="color:#ffffff; font-weight:700; width:1000px; font-size: 40px">
+            <span>Стоимость и цены на наши услуги:<br></span>
+          </h3>
+          <h3 style="color:#ffffff; font-weight:700; width:1000px; font-size: 30px">
+            <span>1 час = 1200 руб.</span>
+          </h3>
+          <h3 style="color:#f2ea00; font-weight:600; width:1200px; font-size: 29px">
+            <span>ОБСЛУЖИВАНИЕ, СОПРОВОЖДЕНИЕ, ПОДДЕРЖКА, НАСТРОЙКА, ОБНОВЛЕНИЕ ПРОГРАММ 1С</span>
+          </h3>
           <div>
-            <div>
-              <div>
-              </div>
-            <h3 style="color:#ffffff;font-weight:700;width:1000px; font-size: 40px">
-              <span class="vcex-heading-inner clr">Стоимость и цены на наши услуги:<br></span>
-            </h3>
-            <h3 style="color:#ffffff;font-weight:700;text-align:center;width:1000px; font-size: 30px">
-              <span class="vcex-heading-inner clr">1 час = 1200 руб.</span>
-            </h3>
-            <h3 style="color:#f2ea00;font-weight:600;text-align:center;width:1200px; font-size: 30px">
-              <span class="vcex-heading-inner clr">ОБСЛУЖИВАНИЕ, СОПРОВОЖДЕНИЕ, ПОДДЕРЖКА, НАСТРОЙКА, ОБНОВЛЕНИЕ ПРОГРАММ 1С</span>
-            </h3>
-              <div><a style="top: 20px" href="#" class="btn akame-btn">Задать вопрос</a></div>
+            <a style="top: 10px" href="#" class="btn akame-btn">Задать вопрос</a>
           </div>
         </div>
-      </div>
     </div>
   </div>
 
