--- a/home/home.html
+++ b/home/home.html
@@ -6,9 +6,6 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" id="wpex-google-font-open-sans-css" href="./fonts/css" type="text/css" media="all">
-  
-      <!-- Тут описывается класс под хэдером -->
-    <style type="text/css" data-type="vc_shortcodes-custom-css">.vc_custom_1560276207363{ font-family:"Open Sans"; position: relative; z-index: 3; padding: 30px;}</style>
 </head>
 <body>
 	<!-- Header Area Start -->
@@ -33,20 +30,20 @@
       <!-- Top Header Area End -->
     </header>
 
-    <div id="test" align="center">
-      <div class="vc_custom_1560276207363">
+    <div id="after-header" align="center">
+      <div class="inner-after-class">
         <div>
-          <h3 style="color:#ffffff; font-weight:700; width:1000px; font-size: 40px">
-            <span>Стоимость и цены на наши услуги:<br></span>
-          </h3>
-          <h3 style="color:#ffffff; font-weight:700; width:1000px; font-size: 30px">
+          <div style="padding-top: 20px; color:#ffffff; font-weight:700; width:1000px; font-size: 40px">
+            Стоимость и цены на наши услуги:
+          </div>
+          <div style="padding-top: 20px; color:#ffffff; font-weight:700; width:1000px; font-size: 30px">
             <span>1 час = 1200 руб.</span>
-          </h3>
-          <h3 style="color:#f2ea00; font-weight:600; width:1200px; font-size: 29px">
+          </div>
+          <div style="padding-top: 20px; color:#f2ea00; font-weight:600; width:1200px; font-size: 29px">
             <span>ОБСЛУЖИВАНИЕ, СОПРОВОЖДЕНИЕ, ПОДДЕРЖКА, НАСТРОЙКА, ОБНОВЛЕНИЕ ПРОГРАММ 1С</span>
-          </h3>
+          </div>
           <div>
-            <a style="top: 10px" href="#" class="btn akame-btn">Задать вопрос</a>
+            <a style="top: 5vh" href="#" class="btn akame-btn">Задать вопрос</a>
           </div>
         </div>
     </div>
