Add block main content

--- a/home/home.html
+++ b/home/home.html
@@ -49,10 +49,12 @@
     </div>
   </div>
 
-  <div align="center" class="container">
-    <div style="padding-top: 5vh">Продажа и комплексное обслуживание 1С</div>
-    <div style="padding-top: 4vh">
-      прогрессивная IT - компания, официальный франчайзи фирмы «1С». Мы предоставляем полный комплекс услуг по продаже, внедрению и сопровождению 1С в любой точке страны. Успешно работаем с компаниями из различных отраслей — от небольших фирм до крупных холдингов.  
+  <div class="container-analog">
+    <div style="font-size: 28px;">
+      <b>Продажа и комплексное обслуживание 1С</b>
+    </div>
+    <div style="font-size: 23px; padding-top: 10px;">
+      Прогрессивная IT - компания, официальный франчайзи фирмы «1С». Мы предоставляем полный комплекс услуг по продаже, внедрению и сопровождению 1С в любой точке страны. Успешно работаем с компаниями из различных отраслей — от небольших фирм до крупных холдингов.  
     </div>
   </div>
 
