--- a/home/home.html
+++ b/home/home.html
@@ -5,7 +5,7 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" id="wpex-google-font-open-sans-css" href="./fonts/css" type="text/css" media="all">
+    <link rel="stylesheet" href="fonts/css.css" type="text/css" media="all">
 </head>
 <body>
 	<!-- Header Area Start -->
@@ -33,13 +33,13 @@
     <div id="after-header" align="center">
       <div class="inner-after-class">
         <div>
-          <div style="padding-top: 20px; color:#ffffff; font-weight:700; width:1000px; font-size: 40px">
+          <div style="padding-top: 30px; color:#ffffff; font-weight:700; width:1000px; font-size: 40px">
             Стоимость и цены на наши услуги:
           </div>
-          <div style="padding-top: 20px; color:#ffffff; font-weight:700; width:1000px; font-size: 30px">
+          <div style="color:#ffffff; font-weight:700; width:1000px; font-size: 40px">
             <span>1 час = 1200 руб.</span>
           </div>
-          <div style="padding-top: 20px; color:#f2ea00; font-weight:600; width:1200px; font-size: 29px">
+          <div style="padding-top: 20px; color:#f2ea00; font-weight:600; width:1200px; font-size: 32px">
             <span>ОБСЛУЖИВАНИЕ, СОПРОВОЖДЕНИЕ, ПОДДЕРЖКА, НАСТРОЙКА, ОБНОВЛЕНИЕ ПРОГРАММ 1С</span>
           </div>
           <div>
@@ -53,20 +53,33 @@
     <div style="font-size: 28px;">
       <b>Продажа и комплексное обслуживание 1С</b>
     </div>
-    <div style="font-size: 23px; padding-top: 10px;">
-      Прогрессивная IT - компания, официальный франчайзи фирмы «1С». Мы предоставляем полный комплекс услуг по продаже, внедрению и сопровождению 1С в любой точке страны. Успешно работаем с компаниями из различных отраслей — от небольших фирм до крупных холдингов.  
+    <div>
+      <p>
+        Прогрессивная IT - компания, официальный франчайзи фирмы «1С».
+      </p> 
+      <p>
+          Мы предоставляем полный комплекс услуг по продаже, внедрению и сопровождению 1С в любой точке страны.
+      </p>
+      <p>
+        Успешно работаем с компаниями из различных отраслей — от небольших фирм до крупных холдингов.
+      </p>
+    </div>
+  </div>
+
+  <div>
+    <div class="image-box ">
+      <div class="into-image-box">
+        <p>Программы на платформе 1С обладают широким функционалом и способны закрыть практически любую типовую потребность современного бизнеса. Если вам необходим функционал, который вы не можете найти в типовом решении 1С, возникает необходимость доработать базу или конфигурацию программы.</p>
+      </div>
     </div>
   </div>
 
 <!-- CONTENT BEGIN -->
-<div class="container">
+<div class="container-analog">
     <div class="row">       
         <div class="col-xs-12">           
-            <article class="page" itemscope itemtype="http://schema.org/Service">
-                <meta itemprop="serviceType" content='Обслуживание 1С: Предприятие'/>
                 <div class="page-body">
 
-                        <!-- <p style="text-align: justify;">Программы на платформе 1С обладают широким функционалом и способны закрыть практически любую типовую потребность современного бизнеса. Если вам необходим функционал, который вы не можете найти в типовом решении 1С, возникает необходимость доработать базу или конфигурацию программы.</p> -->
 <h2 style="text-align: center;"><span style="font-size: 18pt;">Такие доработки могут понадобиться:</span></h2>
 <div class="choose-us-content mt-30 mb-80">
     <ul>
