--- a/home/home.html
+++ b/home/home.html
@@ -43,7 +43,7 @@
             <span>ОБСЛУЖИВАНИЕ, СОПРОВОЖДЕНИЕ, ПОДДЕРЖКА, НАСТРОЙКА, ОБНОВЛЕНИЕ ПРОГРАММ 1С</span>
           </div>
           <div>
-            <a style="top: 5vh" href="#" class="btn akame-btn">Задать вопрос</a>
+            <a style="top: 5vh; font-size: 18px" href="#" class="btn akame-btn">Задать вопрос</a>
           </div>
         </div>
     </div>
@@ -73,23 +73,19 @@
       </div>
     </div>
   </div>
-
-<!-- CONTENT BEGIN -->
-<div class="container-analog">
-    <div class="row">       
-        <div class="col-xs-12">           
-                <div class="page-body">
-
-<h2 style="text-align: center;"><span style="font-size: 18pt;">Такие доработки могут понадобиться:</span></h2>
-<div class="choose-us-content mt-30 mb-80">
-    <ul>
-        <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если у Вас сложный учет и/или нестандартные операции;</li>
-        <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если Вы хотите дополнительные формы отчетности;</li>
-        <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если вы хотите настроить под свои особенности документооборот и печатные формы;</li>
-        <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если вы хотите изменить внешний вид документов, журналов и справочников;</li>
-        <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если у Вас особенная система безопасности и предоставления доступов;</li>
-        <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если Вам необходима интеграция со сторонним программным обеспечением или загрузка-выгрузка данных.</li>
-    </ul>
+  
+<div class="container-list">
+  <h2 style="text-align: center;"><span style="font-size: 18pt;">Такие доработки могут понадобиться:</span></h2>
+  <div class="choose-us-content mt-30 mb-80">
+      <ul>
+          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если у Вас сложный учет и/или нестандартные операции;</li>
+          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если Вы хотите дополнительные формы отчетности;</li>
+          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если вы хотите настроить под свои особенности документооборот и печатные формы;</li>
+          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если вы хотите изменить внешний вид документов, журналов и справочников;</li>
+          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если у Вас особенная система безопасности и предоставления доступов;</li>
+          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если Вам необходима интеграция со сторонним программным обеспечением или загрузка-выгрузка данных.</li>
+      </ul>
+  </div>
 </div>
 <h1 style="text-align: center;"><span style="font-size: 18pt;">Список услуг</span></h1>
 <p><em>Оценка стоимости разовых работ проводится на основании вида работ. </em></p>
