--- a/home/home.html
+++ b/home/home.html
@@ -73,7 +73,7 @@
       </div>
     </div>
   </div>
-  
+
 <div class="container-list">
   <h2 style="text-align: center;"><span style="font-size: 18pt;">Такие доработки могут понадобиться:</span></h2>
   <div class="choose-us-content mt-30 mb-80">
@@ -87,86 +87,78 @@
       </ul>
   </div>
 </div>
-<h1 style="text-align: center;"><span style="font-size: 18pt;">Список услуг</span></h1>
-<p><em>Оценка стоимости разовых работ проводится на основании вида работ. </em></p>
-<div class="table-responsive">
+
+<h1 style="text-align: center;"><span style="font-size: 18pt;">Краткий список услуг</span></h1>
+<div align="center">
+<div style="width: 1000px;">
   <table class="table table-bordered">
     <tbody>
-      <tr>
-        <td id="table-center">
-          <p><strong>Наименование и вид работ</strong></p>
-        </td>
-        <td id="table-center" style="width: 200px">
-          <p><strong>Цена, руб.</strong></p>
-        </td>
-      </tr>
       <tr>
         <td>
           <p><strong>Первоначальная</strong><br> установка и настройка программ 1С</p>
         </td>
         <td>
-          <p>1400 за базу или релиз</p>
+          <p>от 1 часа</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p><strong>Обновление</strong><br> конфигурации 1С типовых и доработанных</p>
+          <p><strong>Обновление 1С</strong></p>
         </td>
         <td>
-          <p>1500 (час)</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p><strong>Платформа 1С предприятие </strong><br>разработка и программирование
-        </p>
-        </td>
-        <td>
-          <p>1400 (час)</p>
+          <p>от 0,5 часа</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p><strong>Создание</strong><br> обработок, отчётов и печатных форм для любой 1С</p>
+          <p><strong>Создание</strong><br> обработок и отчётов 1С</p>
         </td>
         <td>
-          <p>1400 (час) до 5 часов</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p><strong>Загрузка\выгрузка</strong><br> данных из Word, Excel, XML</p>
-        </td>
-        <td>
-          <p>Индивидуально</p>
+          <p>от 2 часов</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p><strong>Настройка обменов</strong><br> перенос данных между базами 1С и другими БД</p>
+          <p><strong>Доработка и создание</strong><br> новых печатных форм</p>
         </td>
         <td>
-          <p>800 (30 мин)</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p><strong>Тестирование и исправление проблем</strong><br> с запуском, зависанием и восстановлением</p>
-        </td>
-        <td>
-          <p>от 1400 (час)</p>
+          <p>от 1 часа</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p><strong>Сопровождение 1С</strong></p>
+          <p><strong>Настройка обменов</strong><br> перенос данных между базами</p>
         </td>
         <td>
-          <p>от 1400 (час)</p>
+          <p>от 2 часов</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><strong>Настройка прав доступа</strong></p>
+        </td>
+        <td>
+          <p>от 1 часа</p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p><strong>Исправление ошибок, оптимизация 1С</strong></p>
+        </td>
+        <td>
+          <p>от 1 часа</p>
         </td>
       </tr>
     </tbody>
   </table>
+</div>
+</div>
+
+<div class="container-analog">
+  <p>
+    Все работы выполняем быстро, качественно и в короткие сроки.
+    Предоставляем гарантию на абсолютно все виды работ.
+  </p>
 </div>
 
 <div class="container">
@@ -204,13 +196,10 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 
-<!-- CONTENT END -->
-
-<footer id="footer-wrp" class="lato">
+<footer>
    
 </footer>
 
